gtkpod V0.99.3

       BUGFIX: Fixed segfault when updating tracks or directories with
       artowrk present.

       BUGFIX: Browse button for "Sync Notes Script" opened a
       directory browser instead of a file browser.

gtkpod V0.99.2
       BUGFIX: Fix segfault when applying preferences.

       BUGFIX: Don't require libcurl (not actively used).

       UPDATE: Swedish translation catalog

       IMPROVEMENT: Allow export of multiple thunderbird address
       books (by naming the output filename).

gtkpod V0.99.0
       NEW: type-ahead search functionality. Thanks to Nick Piper,
       http://www.nickpiper.co.uk/ -- please note that the list view
       you want to search in needs to have keyboard focus. Selection
       of the search column is done by clicking anywhere inside the
       column.

       NEW: Handle Compilations decently. The compilation mp3 tag is
       read and written, and compilation artists can be grouped into
       "Compilations" in the Artist filter tab. Thanks to Iain Benson!

       NEW: Window for edit of track details, including functionality
       to set thumbnails. The thumbnails are not stored as tags in the
       file as iTunes does it. Instead, the original filename is
       stored.

       NEW: Display and setting/removing of thumbnail images. Choose
       "Show Details" from the context menu (right mouse-button). New
       thumbnails are displayed by the iPod but get wiped by iTunes,
       however.

       NEW: Automatic adding of thumbnail images when adding new
       tracks or updating existing ones. See the option on the 'Track
       Info' page of the preferences dialog for settings about which
       filename will be used. Any filename is possible, even filenames
       constructed from the album or artist name.

       NEW: very basic iPod video support (you can add Videos but no
       metadata is filled in). Thanks to Uwe Herman for the input.

       NEW: script to sync contacts from a Palm (via jppy